--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@angular/cli": "12.0.5",
     "vue": "^3.0.0"
   },
   "devDependencies": {
